feat: add controllers, forms, security
update repositories and services
update DTOs
add exceptions
add ExceptionHandler